# projects_docker

./: README.md
a_medium_project/: Dockerfile  main.py  pyproject.toml
a_minor_project/: Dockerfile  main.py
